blackbox-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-to-blackbox
  namespace: blackbox
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: blackbox
  ingress:
  - from:
    - podSelector:
        matchLabels:
          prometheus: prom-kube-prometheus-stack-prometheus
    ports:
    - protocol: TCP
      port: 9115
  policyTypes:
  - Ingress
